# ImageProcessing-Module

./: README.md
OpenCV4人脸检测/: CMakeLists.txt  main.cpp  readme.md
SIFT/: CMakeLists.txt  README.md
SIFT/src/: app.cpp  app.h  counttime.cpp  counttime.h  image.cpp  image.h  main.cpp
方向滤波/: DirectionFilter.m  README.md
