cmake_minimum_required(VERSION 2.6)
project(facedetector)
set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -march=native -O3 -pthread" )
find_package(OpenCV REQUIRED)
add_executable(facedetector main.cpp)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OpenCV_LIBS})
install(TARGETS facedetector RUNTIME DESTINATION bin)
